Loan API and Integration has been done.

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,6 +2,6 @@ PORT =3001
 
 SALT_ROUNDS = 10
 
-MONGO_DB_URL =mongodb://localhost:27017/loanwebapp
+MONGO_DB_URL =mongodb+srv://karthikraut2:KSwmreAxe77J5K5z@webapp.3u1df.mongodb.net/?retryWrites=true&w=majority&appName=WebApp
 
 JWT_KEY=R@nd0mStr1ngF0rJWT!$ecUr1ty
