--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@toolpad/core": "^0.7.0",
     "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-pro-sidebar": "^1.1.0",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "postcss": "^8",
